tests/invalid_code/access_modifer.bs
mod my_mod {
    const x = 1;
    pub(pkg) const rs = 2014;
    pub const v = 4;
}

fn main() {
    const my_x = my_mod::x; // error
    const my_rs = my_mod::rs; // ok
    const my_v = my_mod::v; // ok
}