tests/invalid_code/access_modifer.out
tests/invalid_code/access_modifer.bs:8:26: error: cannot access private constant `x`
